--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </div>
         <form class="newPost">
             <label>Nuevo post</label>
+            <div class="newPostC">
             <input type="text" placeholder="Titulo">
             <textarea name="newPostBody" rows="8" placeholder="Escribe aquí tu nuevo post..."></textarea>
             <input type="submit">
+            </div>
         </form>
         <div class="pagination"></div>
       
@@ -42,7 +44,6 @@
                     </form>
                 </div>
             </div>
-            </br>
     </template>
     <template class="comment-template">
         <div class="comment">
